# banana-table-detection

./: Dockerfile  app.py  download.py  pyproject.toml  test.py
