[tool.poetry]
name = "banana-table-detection-3.8.12"
version = "0.1.0"
description = ""
authors = ["DoctorSlimm <87606888+DoctorSlimm@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sanic = "22.6.2"
accelerate = "^0.18.0"
ultralyticsplus = "0.0.23"
ultralytics = "8.0.21"
fitz = "^0.0.1-alpha.2"
python-dotenv = "^1.0.0"
banana-dev = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
